# cat-edit-mml

./: AUDIO_PLAYBACK_PLAN.md  Cargo.toml  DEMO.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_SUMMARY.md  UI_EXAMPLE.txt  _config.yml
generated-docs/: development-status-generated-prompt.md  development-status.md  project-overview-generated-prompt.md  project-overview.md
issue-notes/: 10.md  6.md  8.md
src/: app.rs  event.rs  lib.rs  main.rs  mml.rs  template.rs  ui.rs
