[package]
name = "cat-edit-mml"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
license = "MIT"
description = "TUI Editor for Music Macro Language (MML)"

[dependencies]
# TUI dependencies
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"

# Additional dependencies
anyhow = "1.0"

# MML playback dependencies
mmlabc-to-smf = { git = "https://github.com/cat2151/mmlabc-to-smf-rust" }
smf-to-ym2151log-rust = { git = "https://github.com/cat2151/smf-to-ym2151log-rust" }
ym2151-log-play-server = { git = "https://github.com/cat2151/ym2151-log-play-server" }
serde_json = "1.0"

[features]
default = []
